--- a/src/components/formItems/DatePickerAndCheckbox/index.module.scss
+++ b/src/components/formItems/DatePickerAndCheckbox/index.module.scss
@@ -6,5 +6,14 @@
     display: flex;
     align-items: center;
     margin-left: 8px;
+    span {
+      word-break: keep-all;
+    }
+  }
+  .noLabel {
+    span:not(.ant-checkbox) {
+      padding-inline-start: 0 !important;
+      padding-inline-end: 0 !important;
+    }
   }
 }
