--- a/src/global.scss
+++ b/src/global.scss
@@ -2,4 +2,4 @@ $headHeight: 60px;
 $globalPrimaryColor: #1677FF;
 $globalRedColor: #FF4D4F;
 $defaultTextColor: '#000000E0';
-$disabledColor: '#00000040';
+$disabledColor: rgba(0, 0, 0, 0.25);
