--- a/src/global.scss
+++ b/src/global.scss
@@ -2,4 +2,5 @@ $headHeight: 60px;
 $globalPrimaryColor: #1677FF;
 $globalRedColor: #FF4D4F;
 $defaultTextColor: '#000000E0';
+$greyTextColor: #b0b0b0;
 $disabledColor: rgba(0, 0, 0, 0.25);
