--- a/src/components/SampleBox/index.module.scss
+++ b/src/components/SampleBox/index.module.scss
@@ -16,7 +16,7 @@
     font-size: 14px;
     color: #444444;
     font-weight: 600;
-    background-color: #fcfcfc;
+    background-color: #f3f3f3;
     padding: 0 20px;
     border-top-left-radius: $borderRadius;
     border-top-right-radius: $borderRadius;
