--- a/src/components/AliTable/index.module.scss
+++ b/src/components/AliTable/index.module.scss
@@ -120,6 +120,12 @@
           font-size: 12px !important;
         }
       }
+      .ant-checkbox-wrapper {
+        font-size: 12px !important;
+      }
+      span {
+        font-size: 12px !important;
+      }
     }
   }
 }
