--- a/src/components/AliTable/index.module.scss
+++ b/src/components/AliTable/index.module.scss
@@ -163,4 +163,16 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  position: relative;
+}
+
+.ellipsisTooltip {
+  position: fixed;
+  font-size: 12px;
+  background-color: rgba(0, 0, 0, .8);
+  color: #ffffff;
+  padding: 4px;
+  border-radius: 4px 6px;
+  max-width: 400px;
+  z-index: 1001;
 }
